<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivityKPR" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#76FF03"
        android:padding="10dp"

        >

        <TextView
            android:text="HASIL ILUSTRASI BAGI HASIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/hasilBaghas"
            android:textColor="#673AB7"
            android:gravity="center"
            android:textStyle="bold"
            />
        <TextView
            android:text="@string/hpm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#673AB7"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/jumlahHPM"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:text="@string/nominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#673AB7"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/nominal"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:text="@string/nisbah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#673AB7"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/baghas"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:text="@string/jh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#673AB7"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/jumlahHari"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:text="@string/jumlahPerhitungan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#673AB7"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/jumlahHitungHari"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:text="@string/BrutoBagHas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#673AB7"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/BagHasBruto"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:text="@string/Pajak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#673AB7"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/PajakBagHas"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:text="@string/NetBagHas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#673AB7"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/BagHasNet"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:text="@string/Er"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#673AB7"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/EquivalentRate"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="KEMBALI"
            android:id="@+id/back"
            android:onClick="Kembali"
            android:gravity="center"
            android:background="#673AB7"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            />

    </LinearLayout>

</ScrollView>
