<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivityKPR" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#76FF03"
        android:padding="10dp"

        >

        <TextView
            android:text="HASIL SIMULASI KPR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/hasilPensiun"
            android:textColor="#673AB7"
            android:gravity="center"
            android:textStyle="bold"
            />
        <TextView
            android:text="@string/jw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#673AB7"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/jangkaWaktuSimulasi"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:text="@string/yield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#673AB7"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/yieldSimulasi"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:text="@string/gt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#673AB7"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/tampilGajiTetap"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:text="@string/gtt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#673AB7"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/tampilGajiTidakTetap"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:text="@string/totalgaji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#673AB7"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/tampilTotalGaji"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:text="@string/totalangsuran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#673AB7"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/tampilAngsuranBerjalan"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:text="@string/angsurandiakui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#673AB7"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/tampilCashRatio"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:text="@string/totalangsurandiakui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#673AB7"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/tampilGajiDiakui"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:text="@string/maksimalpinjaman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#673AB7"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/tampilPinjamanSimulasi"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="KEMBALI"
            android:id="@+id/back"
            android:onClick="Kembali"
            android:gravity="center"
            android:background="#673AB7"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            />

    </LinearLayout>

</ScrollView>


