<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#76FF03"
    tools:context=".MainActivityKPR"
    android:padding="30dp"
    >
    <TextView
        android:text="HASIL KALKULATOR KPR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:id="@+id/kalkulator"
        android:textColor="#673AB7"
        android:gravity="center"
        android:textStyle="bold"
        />
    <TextView
        android:text="@string/pinjaman"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#673AB7"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/TampilanPinjaman"
        android:text=" "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#ff5722"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:text="@string/yield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#673AB7"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/TampilanYield"
        android:text=" "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#ff5722"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:text="@string/jw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#673AB7"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/TampilanJW"
        android:text=" "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#ff5722"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:text="@string/angsuran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#673AB7"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/TampilanAngsuran"
        android:text=" "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#ff5722"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="KEMBALI"
            android:id="@+id/back"
            android:gravity="center"
            android:onClick="Back"
            android:background="#673AB7"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            />

</LinearLayout>
