<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#673AB7"
    tools:context=".MainActivityKPR"
    >

    <TextView
        android:text="ANALISA PINJAMAN KPR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/simulasi"
        android:textColor="#76FF03"
        android:gravity="center"
        android:textStyle="bold"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/jw"
            android:text="@string/jw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#76FF03"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/inTenor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:inputType="phone"
            />

        <TextView
            android:id="@+id/Yield"
            android:text="@string/yield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#76FF03"
            />

        <EditText
            android:id="@+id/inYield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:inputType="phone"
            />

        <TextView
            android:id="@+id/gajitetap"
            android:text="@string/gt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#76FF03"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/inGT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:inputType="phone"
            />

        <TextView
            android:id="@+id/gajitidaktetap"
            android:text="@string/gtt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#76FF03"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/inGTT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:inputType="phone"
            />
        <TextView
            android:id="@+id/hutang"
            android:text="@string/pinjamanbank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#76FF03"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/inHutang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="#ff5722"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:inputType="phone"
            />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="0dp"
        android:paddingLeft="40dp"
        android:layout_gravity="center"
        >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="1"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Proses"
            android:id="@+id/prosesSimulasi"
            android:onClick="ProsesSimulasi"
            android:gravity="center"
            android:background="#76FF03"
            android:layout_marginRight="10dp"
            android:textColor="#673AB7"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="1"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="KELUAR"
            android:id="@+id/exit"
            android:onClick="exit"
            android:gravity="center"
            android:background="#76FF03"
            android:textColor="#673AB7"
            android:textStyle="bold"
            />
    </LinearLayout>

</LinearLayout>

</LinearLayout>
</LinearLayout>